infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hit-and-blow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hit-and-blow
  template:
    metadata:
      labels:
        app: hit-and-blow
    spec:
      containers:
        - name: hit-and-blow-container
          image: localhost:32000/hit-and-blow:v0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
