infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hit-and-blow-service
spec:
  selector:
    app: hit-and-blow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
