infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hit-and-blow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: public
  rules:
    - host: www.chrom.jp
      http:
        paths:
          - path: /hit-and-blow(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hit-and-blow-service
                port:
                  number: 80
  tls:
    - hosts:
        - www.chrom.jp
      secretName: hit-and-blow-secret
